# ARCHIE

./: README.md  cartesian_manipulator_pid_torque.slxc  manipulator_pid_torque.slxc  manipulator_torque.slxc  manipulator_torque_test.slxc
archie_description/: CMakeLists.txt  package.xml
archie_description/config/: joint_names_manipulator.yaml  main_controller.yaml  rviz_display.rviz
archie_description/launch/: display.launch  gazebo.launch  gazebo_rviz.launch  gazebo_test.launch  manipulator_control.launch  spawn_sdf.launch
archie_description/meshes/: base_link.STL  ee_marker.STL  link_6.STL  link_62.STL
archie_description/meshes/gripper/: base_garra.STL  connector1_link.STL  connector2_link.STL  crank_link.STL  garra1_link.STL  garra2_link.STL
archie_description/models/bowl/: model.config  model.sdf
archie_description/models/box/: model.sdf
archie_description/models/plastic_cup/: model.sdf
archie_description/models/table/: model.sdf
archie_description/urdf/: archie_gripper.urdf  box.xacro  ee_marker.urdf  ee_marker.xacro  fixed_world.xacro  gazebo.xacro  linear_gripper.urdf  linear_gripper.xacro  linear_gripper_test.urdf  manipulator.csv  manipulator.urdf  manipulator.xacro  manipulator2.urdf  manipulator_macro.xacro  manipulator_main.xacro
archie_description/worlds/: ramel.world
archie_master/: CMakeLists.txt  package.xml
archie_moveit/: package.xml
communication/: CMakeLists.txt  package.xml
manipulator_description/: CMakeLists.txt  Dinamica.mlx  Joint States&Goals 1.fig  Joint_States&Goals_1.fig  datos.txt  datos1.txt  package.xml
(+722 files in other folders)
